--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         <section class="glass-card">
             <h2 class="section-title"><i class="fa-regular fa-user"></i> Professional Summary</h2>
             <p class="summary-text">
-                Distinguished Senior Software Engineer with over 9 years of experience driving digital transformation
+                Senior Software Engineer with over 6+ years of experience driving digital transformation
                 and cloud modernization. Expert in architecting scalable, event-driven microservices on Azure using the
                 latest .NET ecosystem (C# 12, .NET 8). Proven leader in DevOps maturity, transitioning legacy monoliths
                 to resilient, containerized cloud-native architectures with Kubernetes and Terraform. Passionate about
