--- a/index.html
+++ b/index.html
@@ -392,54 +392,65 @@
             <h2 class="section-title"><i class="fa-solid fa-code"></i> Technical Expertise</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h3>Backend Development</h3>
+                    <h3>Backend & Architecture</h3>
                     <div class="tags">
-                        <span class="tag">C# 7-12</span>
-                        <span class="tag">.NET 8/7/6/5</span>
-                        <span class="tag">.NET Core 3.1</span>
-                        <span class="tag">ASP.NET Core</span>
-                        <span class="tag">Web API</span>
+                        <span class="tag">C# 12 / .NET 8</span>
+                        <span class="tag">ASP.NET Core Web API</span>
                         <span class="tag">Minimal APIs</span>
-                        <span class="tag">EF Core</span>
-                        <span class="tag">Dapper</span>
-                    </div>
-                </div>
-                <div class="skill-category">
-                    <h3>Cloud & DevOps</h3>
-                    <div class="tags">
-                        <span class="tag">Azure</span>
-                        <span class="tag">Azure DevOps</span>
-                        <span class="tag">GitHub Actions</span>
-                        <span class="tag">Terraform</span>
-                        <span class="tag">Docker</span>
-                        <span class="tag">Kubernetes</span>
-                        <span class="tag">CI/CD</span>
-                        <span class="tag">PowerShell</span>
-                    </div>
-                </div>
-                <div class="skill-category">
-                    <h3>Microservices</h3>
-                    <div class="tags">
-                        <span class="tag">Microservices</span>
-                        <span class="tag">API Gateway</span>
-                        <span class="tag">Service Mesh</span>
-                        <span class="tag">Event-Driven</span>
-                        <span class="tag">CQRS</span>
-                        <span class="tag">DDD</span>
                         <span class="tag">Clean Architecture</span>
+                        <span class="tag">DDD & CQRS</span>
+                        <span class="tag">Microservices</span>
+                        <span class="tag">Event-Driven Architecture</span>
+                        <span class="tag">Entity Framework Core</span>
+                        <span class="tag">Dapper</span>
+                        <span class="tag">Redis (Caching)</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>Cloud & DevOps (Azure)</h3>
+                    <div class="tags">
+                        <span class="tag">Azure App Service</span>
+                        <span class="tag">Azure Functions</span>
+                        <span class="tag">Azure Service Bus</span>
+                        <span class="tag">Azure Kubernetes (AKS)</span>
+                        <span class="tag">Azure DevOps Pipelines</span>
+                        <span class="tag">GitHub Actions</span>
+                        <span class="tag">Terraform (IaC)</span>
+                        <span class="tag">Docker</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>Testing & Quality Service</h3>
+                    <div class="tags">
+                        <span class="tag">xUnit / NUnit</span>
+                        <span class="tag">Moq</span>
+                        <span class="tag">App Insights</span>
+                        <span class="tag">Serilog</span>
+                        <span class="tag">SonarQube</span>
+                        <span class="tag">TDD</span>
+                        <span class="tag">Unit & Integration Testing</span>
+                        <span class="tag">OAuth2 / OIDC</span>
                     </div>
                 </div>
                 <div class="skill-category">
                     <h3>Frontend & Databases</h3>
                     <div class="tags">
-                        <span class="tag">HTML5</span>
-                        <span class="tag">CSS3</span>
-                        <span class="tag">JavaScript</span>
                         <span class="tag">SQL Server</span>
-                        <span class="tag">Oracle</span>
-                        <span class="tag">MongoDB</span>
                         <span class="tag">PostgreSQL</span>
-                        <span class="tag">Redis</span>
+                        <span class="tag">MongoDB</span>
+                        <span class="tag">JavaScript (ES6+)</span>
+                        <span class="tag">HTML5 & CSS3</span>
+                        <span class="tag">Oracle</span>
+                    </div>
+                </div>
+                <div class="skill-category">
+                    <h3>Leadership & Agility</h3>
+                    <div class="tags">
+                        <span class="tag">Technical Leadership</span>
+                        <span class="tag">Mentoring & Code Reviews</span>
+                        <span class="tag">Scrum / Agile</span>
+                        <span class="tag">Sprint Planning</span>
+                        <span class="tag">Problem Solving</span>
                     </div>
                 </div>
             </div>
@@ -460,14 +471,16 @@
                         <div class="job-date">Nov 2025 - Jan 2026</div>
                     </div>
                     <ul class="responsibilities">
-                        <li>Architected and deployed cloud-native solutions on Microsoft Azure, implementing robust
-                            CI/CD pipelines for automated delivery</li>
-                        <li>Designed and managed Azure DevOps workflows to optimize development lifecycles and ensure
-                            infrastructure scalability</li>
+                        <li>Deployed cloud-native solutions on **Microsoft Azure**, implementing robust
+                            **CI/CD pipelines** (Azure DevOps) for automated delivery and zero-downtime deployments.
+                        </li>
+                        <li>Designed and managed **Azure DevOps** workflows to optimize development lifecycles and
+                            ensure
+                            infrastructure scalability via **Terraform**.</li>
                         <li>Led technical initiatives to modernize legacy systems into efficient, cloud-hosted
-                            microservices architectures using .NET technologies</li>
-                        <li>Collaborated with cross-functional teams to define and implement DevOps best practices and
-                            infrastructure-as-code standards</li>
+                            **microservices architectures** using **.NET 8** and **Clean Architecture**.</li>
+                        <li>Collaborated with cross-functional teams to define and implement **DevOps best practices**,
+                            **infrastructure-as-code (IaC)**, and comprehensive monitoring/alerting strategies.</li>
                     </ul>
                 </div>
 
@@ -481,14 +494,18 @@
                         <div class="job-date">Sept 2023 - Sept 2025</div>
                     </div>
                     <ul class="responsibilities">
-                        <li>Developed high-performance backend microservices using C# and .NET Core, ensuring seamless
-                            integration with existing systems</li>
-                        <li>Implemented complex infrastructure solutions using Terraform (IaC) and managed Azure cloud
-                            resources for enterprise-scale applications</li>
-                        <li>Championed Scrum and Agile methodologies, enhancing team productivity and delivery speed
-                            through continuous integration and delivery (CI/CD)</li>
-                        <li>Designed and successfully delivered distributed systems leveraging ASP.NET Core, efficiently
-                            handling high-volume data processing and storage</li>
+                        <li>Developed high-performance backend microservices using **C#** and **.NET Core**, ensuring
+                            seamless
+                            integration through **Azure Service Bus**.</li>
+                        <li>Implemented complex infrastructure solutions using **Terraform (IaC)** and managed **Azure
+                            Kubernetes Service (AKS)**
+                            resources for enterprise-scale applications.</li>
+                        <li>Championed **Scrum** and **Agile** methodologies, enhancing team productivity and delivery
+                            speed
+                            through continuous integration and delivery (CI/CD).</li>
+                        <li>Designed and successfully delivered distributed systems leveraging **ASP.NET Core**,
+                            efficiently
+                            handling high-volume data processing and storage with **SQL Server** and **Redis**.</li>
                     </ul>
                 </div>
 
