--- a/index.html
+++ b/index.html
@@ -412,24 +412,23 @@
                         <span class="tag">Azure App Service</span>
                         <span class="tag">Azure Functions</span>
                         <span class="tag">Azure Service Bus</span>
+                        <span class="tag">App Insights & Serilog</span>
                         <span class="tag">Azure Kubernetes (AKS)</span>
                         <span class="tag">Azure DevOps Pipelines</span>
-                        <span class="tag">GitHub Actions</span>
                         <span class="tag">Terraform (IaC)</span>
                         <span class="tag">Docker</span>
                     </div>
                 </div>
                 <div class="skill-category">
-                    <h3>Testing & Quality Service</h3>
+                    <h3>Quality & Leadership</h3>
                     <div class="tags">
-                        <span class="tag">xUnit / NUnit</span>
-                        <span class="tag">Moq</span>
-                        <span class="tag">App Insights</span>
-                        <span class="tag">Serilog</span>
+                        <span class="tag">Technical Leadership</span>
+                        <span class="tag">Mentoring & Code Reviews</span>
+                        <span class="tag">xUnit / Moq</span>
+                        <span class="tag">TDD & DDD</span>
                         <span class="tag">SonarQube</span>
-                        <span class="tag">TDD</span>
-                        <span class="tag">Unit & Integration Testing</span>
-                        <span class="tag">OAuth2 / OIDC</span>
+                        <span class="tag">Scrum / Agile</span>
+                        <span class="tag">Problem Solving</span>
                     </div>
                 </div>
                 <div class="skill-category">
@@ -441,16 +440,6 @@
                         <span class="tag">JavaScript (ES6+)</span>
                         <span class="tag">HTML5 & CSS3</span>
                         <span class="tag">Oracle</span>
-                    </div>
-                </div>
-                <div class="skill-category">
-                    <h3>Leadership & Agility</h3>
-                    <div class="tags">
-                        <span class="tag">Technical Leadership</span>
-                        <span class="tag">Mentoring & Code Reviews</span>
-                        <span class="tag">Scrum / Agile</span>
-                        <span class="tag">Sprint Planning</span>
-                        <span class="tag">Problem Solving</span>
                     </div>
                 </div>
             </div>
@@ -471,16 +460,19 @@
                         <div class="job-date">Nov 2025 - Jan 2026</div>
                     </div>
                     <ul class="responsibilities">
-                        <li>Deployed cloud-native solutions on **Microsoft Azure**, implementing robust
-                            **CI/CD pipelines** (Azure DevOps) for automated delivery and zero-downtime deployments.
+                        <li>Deployed cloud-native solutions on <b>Microsoft Azure</b>, implementing robust
+                            <b>CI/CD pipelines</b> (Azure DevOps) for automated delivery and zero-downtime deployments.
                         </li>
-                        <li>Designed and managed **Azure DevOps** workflows to optimize development lifecycles and
+                        <li>Designed and managed <b>Azure DevOps</b> workflows to optimize development lifecycles and
                             ensure
-                            infrastructure scalability via **Terraform**.</li>
+                            infrastructure scalability via <b>Terraform</b>.</li>
                         <li>Led technical initiatives to modernize legacy systems into efficient, cloud-hosted
-                            **microservices architectures** using **.NET 8** and **Clean Architecture**.</li>
-                        <li>Collaborated with cross-functional teams to define and implement **DevOps best practices**,
-                            **infrastructure-as-code (IaC)**, and comprehensive monitoring/alerting strategies.</li>
+                            <b>microservices architectures</b> using <b>.NET 8</b> and <b>Clean Architecture</b>.
+                        </li>
+                        <li>Collaborated with cross-functional teams to define and implement <b>DevOps best
+                                practices</b>,
+                            <b>infrastructure-as-code (IaC)</b>, and comprehensive monitoring/alerting strategies.
+                        </li>
                     </ul>
                 </div>
 
@@ -494,18 +486,22 @@
                         <div class="job-date">Sept 2023 - Sept 2025</div>
                     </div>
                     <ul class="responsibilities">
-                        <li>Developed high-performance backend microservices using **C#** and **.NET Core**, ensuring
+                        <li>Developed high-performance backend microservices using <b>C#</b> and <b>.NET Core</b>,
+                            ensuring
                             seamless
-                            integration through **Azure Service Bus**.</li>
-                        <li>Implemented complex infrastructure solutions using **Terraform (IaC)** and managed **Azure
-                            Kubernetes Service (AKS)**
+                            integration through <b>Azure Service Bus</b>.</li>
+                        <li>Implemented complex infrastructure solutions using <b>Terraform (IaC)</b> and managed
+                            <b>Azure
+                                Kubernetes Service (AKS)</b>
                             resources for enterprise-scale applications.</li>
-                        <li>Championed **Scrum** and **Agile** methodologies, enhancing team productivity and delivery
+                        <li>Championed <b>Scrum</b> and <b>Agile</b> methodologies, enhancing team productivity and
+                            delivery
                             speed
                             through continuous integration and delivery (CI/CD).</li>
-                        <li>Designed and successfully delivered distributed systems leveraging **ASP.NET Core**,
+                        <li>Designed and successfully delivered distributed systems leveraging <b>ASP.NET Core</b>,
                             efficiently
-                            handling high-volume data processing and storage with **SQL Server** and **Redis**.</li>
+                            handling high-volume data processing and storage with <b>SQL Server</b> and <b>Redis</b>.
+                        </li>
                     </ul>
                 </div>
 
